possible fix for flickering of images

--- a/less/main.less
+++ b/less/main.less
@@ -45,6 +45,10 @@ header
     display: block;
 }
 
+figure,figcaption {
+	-webkit-backface-visibility: hidden;
+}
+
 /**
  * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
  */
